@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.47 2007-11-22 18:09:43 nicm Exp $
+# $Id: Makefile,v 1.48 2007-11-23 17:52:54 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -27,7 +27,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-link-window.c cmd-unlink-window.c cmd-next-window.c \
       cmd-swap-window.c cmd-rename-session.c cmd-kill-session.c \
       cmd-switch-client.c cmd-has-session.c cmd-scroll-mode.c cmd-copy-mode.c \
-      window-scroll.c window-more.c window-copy.c
+      cmd-paste-buffer.c window-scroll.c window-more.c window-copy.c
 
 CC?= cc
 INCDIRS+= -I. -I- -I/usr/local/include
