@@ -59,6 +59,8 @@
 	command to purge window history
  	extend list-clients to list clients attached to a session (-a for all?)
 	bring back detach-session to detach all clients on a session?
+	paste buffer etc shouldn't be limited to keys
+	buffer manip: clear, view etc
 - function groups, bind-key ^W { select-window 0; send-key ^W } etc
 - more(1) style handling for in-client output
 - allow fnmatch for -c, so that you can, eg, detach all clients
